address alignment issue

--- a/src/styles/spms_base.css
+++ b/src/styles/spms_base.css
@@ -1,5 +1,5 @@
 *{ margin: 0; padding: 0; }
-.container{ width: 960px; margin: auto; margin-top: 60px; padding: 0.5em}
+.container{ width: 960px; margin: auto;}
 .container.headContents { background: #0000EF; opacity: 1; color: #FFFFFF; padding: 0.5em 1em, 0.5em 1em;}
 .fleft{float: left;}
 .fright{float: right;}
